<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeachDroid</string>
    <string name="title_robotJogging">Manual Jogging</string>
    <string name="title_robotPrograms">Robot Programs</string>
    <string name="title_robotOverview">Robot Overview</string>
    <string name="title_robotInfos">Infos</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_teach_view">TeachDroid</string>
    <string name="selectKinematicLabelText">Select robot:</string>
    <string name="robotPower">Robot Power</string>
    <string name="robotOperationMode">Current Operation Mode</string>
    <string name="programTableHeader">Available Programs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_robots">Robots</string>
    <string name="hint_ip_address">IP Address of PLC</string>
    <string name="toolname_prompt">Select tool</string>
    <string name="refsysname_prompt">Select RefSys</string>
    <string name="axis_position">Axis Position</string>
    <string name="cartesian_position">Cartesian Position</string>
    <string name="default_robot_name">ArtarmTX60L</string>
    <string name="title_project_list">Projects</string>
    <string name="title_project_detail">Project Detail</string>
    <string name="title_section_connect">TeachDroid</string>
    <string name="title_section_overview">Overview</string>
    <string name="title_section_programs">Programs</string>
    <string name="title_section_projects">Projects</string>
    <string name="title_section_trace">Trace</string>
    <string name="title_section_alarms">Pending Alarms</string>
    <string name="title_section_history">Alarm History</string>
    <string name="title_robot">Robot</string>
    <string name="title_section_refsys_tool">Refsys/Tool</string>
    <string name="title_section_robot_overview">Overview</string>
    <string name="title_section_robot_detail">Details</string>
    <string name="dummy_mode">A</string>
    <string name="dummy_refsys">Refsys</string>
    <string name="dummy_tool">Tool</string>
    <string name="dummy_power">power</string>
    <string name="dummy_ovr">Override</string>
    <string name="selectedLabel">Selected:</string>
    <string name="jogLabel">Jog:</string>
    <string name="progLabel">proj.prog</string>
    <string name="program_code_dummy">LIN(cp0)\nDyn(d0)\n</string>
    <string name="title_section_program_code">Program Code</string>
    <string name="title_program_info">Program Info</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dialog_confirm_message_title">Confirm Message?</string>
    <string name="dialog_confirm_message_text">Do you really want to confirm the selected message?</string>
    <string name="confirm_all">Confirm All</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="emptyMessages">No current alarms</string>
    <string name="action_activate_t10">Toggle T10</string>

    <string-array name="navigation_array">
        <item>Positions</item>
        <item>Projects</item>
        <item>Information</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>