<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/info_main_red"
    android:orientation="vertical" >

    <!-- <ListView -->
    <!-- android:id="@+id/infoListView" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" > -->
    <!-- </ListView> -->


    <!-- <CheckBox -->
    <!-- android:id="@+id/robotPower" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginLeft="5dp" -->
    <!-- android:text="@string/robotPower" -->
    <!-- android:textAppearance="?android:attr/textAppearanceLarge" /> -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/title_section_alarms"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/actualMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.9" />
    
    <TextView
        android:id="@+id/empty_list_item"
         android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.9"
        android:visibility="gone"
        android:text="@string/emptyMessages" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="175dp"
        android:layout_weight="0.1"
        android:contentDescription="@string/title_activity_main"
        android:src="@drawable/logo" />

</LinearLayout>